--- a/theme-dust.html
+++ b/theme-dust.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Willy Wonkas - Personal Portfolio Website Template" />
 	<meta name="keywords" content="blog, business card, creative, creative portfolio, cv theme, online resume, personal, portfolio, professional cv, responsive portfolio, resume, resume theme, vcard" />
 	<meta name="author" content="willy wonka" />
-    <title>Willy Wonkas - Personal Portfolio Website Template</title>
+    <title>Kartik Deshmukh | MelloB</title>
   <!--favicon-img--> 
    <link rel="icon" type="image/png" href="images/favicon.png">
    <!--favicon-img-->
@@ -24,7 +24,7 @@
     <!--mouse  follower-->
     <!--loader-->
         <div id="loader">
-            <span class="color">Arlo</span>Brown 
+            <span class="color">Kartik Deshmukh</span>MelloB
         </div>
     <!--loader-end-->
     <!--link-screen-->
@@ -77,15 +77,15 @@
             <!--Social Media Links end-->
             <div class="header-content">
                 <div class="header-content-box">
-                <div class="firstline"><span class="color">Arlo </span>Brown</div>
+                <div class="firstline"><span class="color">Kartik </span>Deshmukh</div>
                 <div class="secondline">
                 I'm a
-            <span class="txt-rotate color" data-period="1200"data-rotate='[ " Designer.", " Blogger.", " Freelancer." ]'></span>
+            <span class="txt-rotate color" data-period="1200"data-rotate='[ " Full stack developer.", " Founder.", " Backend & Cloud Engineer" ]'></span>
             <span class="slash">|</span>
         </div>
                     <div class="contact">
-                <a href="Mailto:#"><img src="images/mail.png" alt="email-pic" class="contactpic"></a><!--Your email Id write in place of "#"-->
-                <a href="Tel:#"><img src="images/call.png" alt="phone-pic" class="contactpic"></a><!--Your telephone number Id write in place of "#"-->
+                <a href="Mailto:#me@mellob.tech"><img src="images/mail.png" alt="email-pic" class="contactpic"></a><!--Your email Id write in place of "#"-->
+                <a href="Tel:#+917569236628"><img src="images/call.png" alt="phone-pic" class="contactpic"></a><!--Your telephone number Id write in place of "#"-->
                     </div>    
             </div>
             </div>
