--- a/index.html
+++ b/index.html
@@ -4,19 +4,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Willy Wonkas - Personal Portfolio Website Template" />
+    <meta name="description" content="I am Kartik Deshmukh aka MelloB! I am a software developer, checkout my works 🤟" />
 	<meta name="keywords" content="blog, business card, creative, creative portfolio, cv theme, online resume, personal, portfolio, professional cv, responsive portfolio, resume, resume theme, vcard" />
-	<meta name="author" content="willy wonka" />
+	<meta name="author" content="Kartik Deshmukh | MelloB" />
     <title>Kartik Deshmukh | MelloB</title>
   <!--favicon-img--> 
-   <link rel="icon" type="image/png" href="images/favicon.png">
+   <link rel="icon" type="image/png" href="https://noobsverse.blr1.cdn.digitaloceanspaces.com/assets/mellob.png">
    <!--favicon-img-->
    <!--main css file should not be removed -->
     <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/color-orange.css">
     <!--main css file-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/gsap.min.js"></script>
 </head>
 <body>
+    <style>
+        #navigation-bar img {
+    border-radius: 50%;
+}
+#navigation-content img {
+    border-radius: 50%;
+}
+    </style>
     <!--contains all the div-->
     <div id="all">
     <!--mouse  follower-->
@@ -24,7 +33,7 @@
     <!--mouse  follower-->
     <!--loader-->
         <div id="loader">
-            <span class="color">Kartik Deshmukh</span>MelloB
+            <span class="color">Kartik</span>Deshmukh
         </div>
     <!--loader-end-->
     <!--link-screen-->
@@ -37,7 +46,7 @@
         <!--Navigator-fullscreen-->
         <div id="navigation-content">
             <div class="logo">
-                <img src="images/willy wonka logo.png" alt="logo">
+                <img src="https://noobsverse.blr1.cdn.digitaloceanspaces.com/assets/mellob.png" alt="logo">
             </div>
             <div class="navigation-close">
                 <span class="close-first"></span>
@@ -55,7 +64,7 @@
           <!--Home Page-->
         <!--Menubar-->
         <div id="navigation-bar">
-            <img src="images/willy wonka logo.png" alt="logo">
+            <img src="https://noobsverse.blr1.cdn.digitaloceanspaces.com/assets/mellob.png" alt="logo">
             <div class="menubar">
                 <span class="first-span"></span>
                 <span class="second-span"></span>
@@ -68,10 +77,10 @@
             <div id="particles"></div>
               <!--Social Media Links-->
             <div class="social-media-links">
-               <a href="#"><img src="images/instagram logo.png" class="social-media" alt="instagram-logo"></a><!--Your instagram homepage link inser in place of "#"-->
-                <a href="#"><img src="images/facebook logo.png" class="social-media" alt="facebook-logo"></a>
-                <a href="#"><img src="images/linkedin logo.png" class="social-media" alt="linkedin-logo"></a>
-                <a href="#"><img src="images/twitter logo.png" class="social-media" alt="twitter-logo"></a>
+               <a href="https://instagram.com/mellob.ai"><img src="images/instagram logo.png" class="social-media" alt="instagram-logo"></a><!--Your instagram homepage link inser in place of "#"-->
+                <a href="https://github.com/mellob1989"><img src="https://w7.pngwing.com/pngs/914/758/png-transparent-github-social-media-computer-icons-logo-android-github-logo-computer-wallpaper-banner-thumbnail.png" alt="external-github-with-cat-logo-an-online-community-for-software-development-logo-shadow-tal-revivo" class="social-media" alt="facebook-logo"></a>
+                <a href="https://www.linkedin.com/in/kartik-deshmukh-404945252"><img src="images/linkedin logo.png" class="social-media" alt="linkedin-logo"></a>
+                <a href="https://x.com/MelloB1989" width="96" height="96" ><img src="https://cdn.iconscout.com/icon/free/png-256/free-x-logo-9764640-7941131.png" class="social-media" alt="twitter-logo"></a>
 
             </div>
             <!--Social Media Links end-->
@@ -91,7 +100,7 @@
             </div>
             <!--header image-->
             <div class="header-image">
-            <img src="images/man.jpg" alt="logo">
+            <!--<img src="https://noobsverse.blr1.cdn.digitaloceanspaces.com/assets/logo.png" alt="logo">-->
             </div>
             <!--header image end-->
         </div>
@@ -100,36 +109,6 @@
         <!--Main-Section End-->
         <!--about-->
         <div id="about">
-            <div class="color-changer">
-            <div class="color-panel">
-                <img src="images/gear.png" alt="">
-            </div>
-            <div class="color-selector">
-                <div class="heading">Custom Colors</div>
-                <div class="colors">
-                    <ul >
-                    <li>
-                        <a href="#0" class="color-red " title="color-red"></a>
-                    </li>
-                    <li>
-                        <a href="#0" class="color-purple" title="color-purple"></a>
-                    </li>
-                    <li>
-                        <a href="#0" class="color-malt" title="color-malt"></a>
-                    </li>
-                    <li>
-                        <a href="#0" class="color-green" title="color-green"></a>
-                    </li>
-                    <li>
-                        <a href="#0" class="color-blue" title="color-blue"></a>
-                    </li>
-                    <li>
-                        <a href="#0" class="color-orange" title="color-orange"></a>
-                    </li>
-                    </ul>
-                </div>
-            </div>
-            </div>
             <!--about content-->
             <div id="about-content">
                 <div class="about-header">
@@ -142,52 +121,21 @@
                <span class="about-first-line">
                     I'm creative 
                     <span class="color">web developer</span>
-                     based in New York , USA </span>
+                     based in Hyderabad, India. </span>
                      <br>
-               <span class="about-second-line"> With 20 years of experience as a professional Web developer, I have acquired the skills and knowledge necessary to make your project a success. I enjoy every step while working.</span>
+               <span class="about-second-line"> I am Kartik Deshmukh aka MelloB. I am a keen developer with a great passion for technology. I have been coding since I was 12, I have explored various fields like Linux, IoT and embedded systems, Ethical Hacking, Web and app development, cloud computing, cryptocurrency, and AI, and still continuing to explore more and more.</span>
                <div class="cv">
                 <a href="#"><button>Download <span class="colors">CV</span></button></a>
             </div>
             </div>
             <!--about picture-->
             <div class="about-img">
-                <img src="images/about.jpg" alt="Your Image">
+                <img src="https://media.licdn.com/dms/image/D5603AQFHNbHlDkgCPw/profile-displayphoto-shrink_200_200/0/1697048040530?e=2147483647&v=beta&t=mnFtsnmWAAfMOt9vR-quE-pQTRDIw313cvcNux3WOXU" alt="Kartik Deshmukh">
             </div>
             </div>
     
             </div>
             <!--services start-->
-            <div id="services">
-                <div class="color-changer">
-                    <div class="color-panel">
-                        <img src="images/gear.png" alt="">
-                    </div>
-                    <div class="color-selector">
-                        <div class="heading">Custom Colors</div>
-                        <div class="colors">
-                            <ul >
-                            <li>
-                                <a href="#0" class="color-red " title="color-red"></a>
-                            </li>
-                            <li>
-                                <a href="#0" class="color-purple" title="color-purple"></a>
-                            </li>
-                            <li>
-                                <a href="#0" class="color-malt" title="color-malt"></a>
-                            </li>
-                            <li>
-                                <a href="#0" class="color-green" title="color-green"></a>
-                            </li>
-                            <li>
-                                <a href="#0" class="color-blue" title="color-blue"></a>
-                            </li>
-                            <li>
-                                <a href="#0" class="color-orange" title="color-orange"></a>
-                            </li>
-                            </ul>
-                        </div>
-                    </div>
-                    </div>
             <!--services header-->
                     <div class="services-heading wow">
                         <span class="color">My</span> Services
@@ -200,7 +148,7 @@
                                <img src="images/coding.png" alt="service-one">
                                </div>
                                <div class="service-description">
-                                <h2>Web Designing</h2>
+                                <h2>Web Development</h2>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod quibusdam possimus</p>
                                </div>
                            </div>
@@ -304,36 +252,6 @@
         <!--about end-->
         <!--portfolio-->
         <div id="portfolio">
-            <div class="color-changer">
-                <div class="color-panel">
-                    <img src="images/gear.png" alt="">
-                </div>
-                <div class="color-selector">
-                    <div class="heading">Custom Colors</div>
-                    <div class="colors">
-                        <ul >
-                        <li>
-                            <a href="#0" class="color-red " title="color-red"></a>
-                        </li>
-                        <li>
-                            <a href="#0" class="color-purple" title="color-purple"></a>
-                        </li>
-                        <li>
-                            <a href="#0" class="color-malt" title="color-malt"></a>
-                        </li>
-                        <li>
-                            <a href="#0" class="color-green" title="color-green"></a>
-                        </li>
-                        <li>
-                            <a href="#0" class="color-blue" title="color-blue"></a>
-                        </li>
-                        <li>
-                            <a href="#0" class="color-orange" title="color-orange"></a>
-                        </li>
-                        </ul>
-                    </div>
-                </div>
-                </div>
             <div class="portfolio-header"> <span class="color"> My </span> Portfolio
             <span class ="header-caption"> Some Of My <span class="color"> Works</span></span></div>
              <div id="portfolio-content">
@@ -394,36 +312,6 @@
         <!--portfolio end-->
         <!--blog-->
         <div id="blog">
-            <div class="color-changer">
-                <div class="color-panel">
-                    <img src="images/gear.png" alt="">
-                </div>
-                <div class="color-selector">
-                    <div class="heading">Custom Colors</div>
-                    <div class="colors">
-                        <ul >
-                        <li>
-                            <a href="#0" class="color-red " title="color-red"></a>
-                        </li>
-                        <li>
-                            <a href="#0" class="color-purple" title="color-purple"></a>
-                        </li>
-                        <li>
-                            <a href="#0" class="color-malt" title="color-malt"></a>
-                        </li>
-                        <li>
-                            <a href="#0" class="color-green" title="color-green"></a>
-                        </li>
-                        <li>
-                            <a href="#0" class="color-blue" title="color-blue"></a>
-                        </li>
-                        <li>
-                            <a href="#0" class="color-orange" title="color-orange"></a>
-                        </li>
-                        </ul>
-                    </div>
-                </div>
-                </div>
         <div class="blog-header"> Blogs</span>
             <span class ="header-caption"> My Latest <span class="color"> blog posts.</span></span></div>
             <div class="blog-content">
@@ -516,36 +404,6 @@
         <!--blog end-->
         <!--contact-->
      <div id="contact">
-        <div class="color-changer">
-            <div class="color-panel">
-                <img src="images/gear.png" alt="">
-            </div>
-            <div class="color-selector">
-                <div class="heading">Custom Colors</div>
-                <div class="colors">
-                    <ul >
-                    <li>
-                        <a href="#0" class="color-red " title="color-red"></a>
-                    </li>
-                    <li>
-                        <a href="#0" class="color-purple" title="color-purple"></a>
-                    </li>
-                    <li>
-                        <a href="#0" class="color-malt" title="color-malt"></a>
-                    </li>
-                    <li>
-                        <a href="#0" class="color-green" title="color-green"></a>
-                    </li>
-                    <li>
-                        <a href="#0" class="color-blue" title="color-blue"></a>
-                    </li>
-                    <li>
-                        <a href="#0" class="color-orange" title="color-orange"></a>
-                    </li>
-                    </ul>
-                </div>
-            </div>
-            </div>
          <div class="contact-header">Contact <span class="color"> Me</span>
         <div class="contact-header-caption"> <span class="color"> Get</span> In Touch.</div></div>
         <div class="contact-content">
@@ -576,21 +434,21 @@
                     <img src="./images/icon-name.png" class="icon" alt="name-icon">
                     <div class="contact-info-icon-text">
                         <h6>Name</h6>
-                        <p>Arlo Brown</p>
+                        <p>Kartik Deshmukh</p>
                   </div>
                 </div>
                 <div class="contect-info-content-line">
                   <img src="./images/icon-location.png" class="icon" alt="location-icon">
                   <div class="contact-info-icon-text">
                       <h6>Location</h6>
-                      <p>New York, USA</p>
+                      <p>Hyderabad, India</p>
                 </div>
               </div>
               <div class="contect-info-content-line">
                   <img src="./images/icon-phone.png" class="icon" alt="phone-icon">
                   <div class="contact-info-icon-text">
                       <h6>Call</h6>
-                      <p>+9865376531</p>
+                      <p>+917569236628</p>
                 </div>
               </div>
               
@@ -598,7 +456,7 @@
                   <img src="./images/icon-email.png" class="icon" alt="email-icon">
                   <div class="contact-info-icon-text">
                       <h6>Email</h6>
-                      <p>Info@example.com</p>
+                      <p>contact@mellob.tech</p>
                 </div>
               </div>
                 </div>
@@ -608,7 +466,7 @@
                     <!--copyright-section You Can Remove After Downloading-->
                     <div class="footer">
                         <div class="footer-text">
-                            <img src="./images/copyright.png" alt="copyright-img" class="images" height="14px"> Willy Wonkas
+                            <img src="./images/copyright.png" alt="copyright-img" class="images" height="14px"> MelloB
                         </div>
                        </div>
                <!--copyright-section-->
