--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
     <!--copyright-section You Can Remove After Downloading-->
             <div class="footer">
              <div class="footer-text">
-                 <img src="./images/copyright.png" alt="copyright-img" class="images" height="14px"> Willy Wonkas
+                 <img src="./images/copyright.png" alt="copyright-img" class="images" height="14px"> Kartik Deshmukh | MelloB
              </div>
             </div>
     <!--copyright-section-->
@@ -304,7 +304,7 @@
                     <!--copyright-section You Can Remove After Downloading-->
             <div class="footer">
                 <div class="footer-text">
-                    <img src="./images/copyright.png" alt="copyright-img" class="images" height="14px"> Willy Wonkas
+                    <img src="./images/copyright.png" alt="copyright-img" class="images" height="14px"> Kartik Deshmukh | MelloB
                 </div>
                </div>
        <!--copyright-section-->
@@ -396,7 +396,7 @@
                <!--copyright-section You Can Remove After Downloading-->
                <div class="footer">
                 <div class="footer-text">
-                    <img src="./images/copyright.png" alt="copyright-img" class="images" height="14px"> Willy Wonkas
+                    <img src="./images/copyright.png" alt="copyright-img" class="images" height="14px"> Kartik Deshmukh | MelloB
                 </div>
                </div>
        <!--copyright-section-->
