--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                     </div>
                         </div>
                     <div class="html-prog wow prog">
-                 <div class="html-progress wow">95%</div>
+                 <div class="html-progress wow">100%</div>
                     </div>
                     </div>
                     <div class="skill-html skill">
@@ -196,17 +196,17 @@
                     </div>
                         </div>
                     <div class="html-prog wow prog">
-                 <div class="js-progress wow">90%</div>
+                 <div class="js-progress wow">95%</div>
                     </div>
                     </div>
                     <div class="skill-html skill">
                         <div class="skill-text">
                     <div class="html">
-                        Adobe Ps
+                        AWS/Azure/GCP
                     </div>
                         </div>
                     <div class="html-prog wow prog">
-                 <div class="adobe-progress wow">83%</div>
+                 <div class="adobe-progress wow">95%</div>
                     </div>
                     </div>
                     <div class="skill-html skill">
@@ -222,7 +222,7 @@
                     <div class="skill-html skill">
                         <div class="skill-text">
                     <div class="html">
-                        JQuery
+                        ReactJS/NextJS
                     </div>
                         </div>
                     <div class="html-prog wow prog">
@@ -232,11 +232,11 @@
                     <div class="skill-html skill">
                         <div class="skill-text">
                     <div class="html">
-                        SEO
+                        ExpressJS/NodeJS
                     </div>
                         </div>
                     <div class="html-prog wow prog">
-                 <div class="seo-progress wow">84%</div>
+                 <div class="seo-progress wow">95%</div>
                     </div>
                     </div>
                 </div>
