--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <meta name="description" content="I am Kartik Deshmukh aka MelloB! I am a software developer, checkout my works 🤟" />
 	<meta name="keywords" content="blog, business card, creative, creative portfolio, cv theme, online resume, personal, portfolio, professional cv, responsive portfolio, resume, resume theme, vcard" />
 	<meta name="author" content="Kartik Deshmukh | MelloB" />
+    <meta
+            property="og:image"
+            content="https://noobsverse.blr1.cdn.digitaloceanspaces.com/assets/mellob.png"
+          />
     <title>Kartik Deshmukh | MelloB</title>
   <!--favicon-img--> 
    <link rel="icon" type="image/png" href="https://noobsverse.blr1.cdn.digitaloceanspaces.com/assets/mellob.png">
